--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  bloc: ^8.1.4
+  dio: ^5.4.3+1
+  shake: ^2.2.0
+  flutter_bloc: ^8.1.6
+  get_it: ^7.6.7
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +30,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/images/background.png
+    - assets/images/success.png
+    - assets/images/loader.png
